<resources>
    <string name="app_name">water</string>
    <string name="debug">debug</string>
    <string name="debug_num">0</string>
    <string name="main_text_home">首页</string>
    <string name="main_text_Quotes">行情</string>
    <string name="main_text_Coin">交易</string>
    <string name="main_text_mine">我的</string>
    <string name="main_text_asset">资产</string>

    <string name="home_list_text_Rising">涨幅榜</string>
    <string name="home_list_text_Trading">成交额榜</string>
    <string name="home_list_text_New_currency">新币榜</string>


    <string name="versionUpdateTip">暂无最新版本，无需更新</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_network">当前无网络</string>
    <string name="parse_error">解析异常</string>
    <string name="login_invalid">登录失效，请重新登录！</string>
    <string name="no_data">暂无数据</string>
    <string name="start_exp">立即体验</string>
    <string name="exit_tips">再按一次退出</string>
    <string name="splash_text">water交易所</string>
    <string name="text_24_change">24h量</string>
    <string name="loading">加载中...</string>
    <string name="find_title_init">加载中</string>
    <string name="find_select_browser">选择浏览器</string>
    <string name="Successful_copy">复制成功</string>
    <string name="please_login">请先登录</string>

    <string name="select_country">选择国家或地区</string>

    <!--登录-->
    <string name="login_text">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_regist">注册</string>
    <string name="login_phone_number">手机号</string>
    <string name="login_phone_number_hint">请输入手机号</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="login_no_account">还没有帐号?</string>
    <string name="login_Go_register">去注册</string>
    <string name="login_Phone">手机登录</string>
    <string name="login_Email">邮箱登录</string>
    <string name="login_check">账户或密码不正确</string>

    <!--注册-->
    <string name="signUp_cancel">取消</string>
    <string name="signUp_china">中国</string>
    <string name="signUp_china_area_">+</string>
    <string name="signUp_china_area">+86</string>
    <string name="signUp_Phone">手机注册</string>
    <string name="signUp_Email">邮箱注册</string>
    <string name="signUp_Verification_code">验证码</string>
    <string name="signUp_phone_number">手机号/邮箱</string>
    <string name="signUp_Email_number">邮箱</string>
    <string name="signUp_Next_step">下一步</string>
    <string name="signUp_Existing_account">已有账号？</string>
    <string name="signUp_Go_login">去登陆</string>
    <string name="signUp_account_empty_hint">账户不能为空</string>
    <string name="signUp_phone_illegal_hint">请输入正确手机号</string>
    <string name="signUp_email_illegal_hint">请输入正确邮箱号</string>
    <string name="signUp_imgcode_empty_hint">图片验证码不能为空</string>
    <string name="signUp_code_empty_hint">验证码不能为空</string>
    <string name="signUp_pwd_empty_hint">密码不能为空</string>
    <string name="signUp_old_pwd_empty_hint">旧密码不能为空</string>
    <string name="signUp_imgcode_illegal_hint">图片验证码不正确</string>
    <string name="send_code">发送验证码</string>
    <string name="send_success">发送成功</string>
    <string name="re_send">重新获取</string>
    <string name="signUp_success">注册成功</string>
    <string name="code_fail">验证失败</string>

    <!--设置密码-->
    <string name="signUp_set_password">设置密码</string>
    <string name="signUp_get_code">获取验证码</string>
    <string name="signUp_consent">注册即表示同意</string>
    <string name="signUp_Service">《服务条款》</string>
    <string name="signUp_Confirm">确认并注册</string>
    <string name="signUp_hint_code">请输入验证码</string>
    <string name="signUp_hint_set_pwd">密码为8-16位数字或字母组合</string>
    <string name="signUp_hint_pwd">请输入密码</string>
    <string name="signUp_hint_Confirm_pwd">请再次输入密码</string>
    <string name="signUp_hint_check_pwd">请检查密码是否合法</string>
    <string name="signUp_hint_pwd_contrast">两次密码不一致</string>
    <string name="signUp_hint_Invitation_code">邀请码（非必填）</string>

    <!--忘记密码-->
    <string name="forget_set_password">重置密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_phone_Mobile">手机找回</string>
    <string name="forget_email_Mobile">邮箱找回</string>
    <string name="forget_Confirm">确认</string>
    <!--修改密码-->
    <string name="change_pwd_success">密码修改成功</string>

    <!--我的-->
    <string name="mine_Security_center">安全中心</string>
    <string name="mine_Verified">实名认证</string>
    <string name="mine_Payment_binding">支付绑定</string>
    <string name="mine_invite_friends">邀请好友</string>
    <string name="mine_Platform_announcement">平台公告</string>
    <string name="mine_Help_center">帮助中心</string>
    <string name="mine_contact_us">联系我们</string>
    <string name="mine_WATER">WATER</string>
    <string name="mine_certified">未认证</string>
    <string name="mine_verified">已认证</string>
    <string name="mine_sign_out">退出登录</string>
    <string name="mine_login_or_registered">登录或注册</string>
    <string name="me_signOut">退出登录？</string>
    <string name="me_signOut_sure">是否确定退出账号？</string>
    <string name="me_signOut_dropout">退出</string>

    <!--安全中心-->
    <string name="Security_center_modify">修改</string>
    <string name="Security_center_Setting">设置</string>
    <string name="Security_center_bind">绑定</string>
    <string name="Security_center_login_password">登录密码</string>
    <string name="Security_center_modify_bingd_email">绑定邮箱</string>
    <string name="Security_center_modify_bingd_phone">绑定手机</string>
    <string name="Security_center_modify_asset_pwd">资金密码</string>
    <string name="Security_center_modify_Google">Google验证</string>
    <string name="bind_email">邮箱</string>
    <string name="bind_phone">手机</string>
    <string name="Modify_Login_password">修改登录密码</string>
    <string name="set_asset_password">设置资金密码</string>
    <string name="Modify_asset_password">修改资金密码</string>
    <string name="Modify_asset_password_success">修改资金密码成功</string>
    <string name="asset_password_hint">密码为6位纯数字</string>
    <string name="old_login_password_hint">请输入旧密码</string>
    <string name="old_asset_password_hint">请输入当前资金密码</string>
    <string name="Security_asset_pwd_success">设置成功</string>
    <string name="Security_bind_success">绑定成功</string>


    <!--支付绑定-->
    <string name="bind_pay">支付绑定</string>
    <string name="bind_pay_bank">银行卡</string>
    <string name="bind_pay_ali">支付宝</string>
    <string name="bind_pay_weichat">微信</string>
    <string name="bind_pay_china_bank_account">中国银行</string>
    <string name="bind_pay_ali_account">支付宝账号</string>
    <string name="bind_pay_weichat_account">微信账号</string>
    <string name="bind_pay_bank_account">银行账号</string>
    <string name="bind_pay_asset_pwd_hint">资金密码</string>
    <string name="bind_pay_name_hint">真实姓名</string>
    <string name="bind_pay_bank_bank_hint">银行卡开户行</string>
    <string name="bind_upload_ali_hint">点击上传支付宝二维码</string>
    <string name="bind_upload_weichat_hint">点击上传微信二维码</string>
    <string name="bind_confirm">确认绑定</string>
    <string name="bind_bank_account">银行卡支付绑定</string>
    <string name="bind_ali_account">支付宝支付绑定</string>
    <string name="bind_weichat_account">微信支付绑定</string>
    <!--实名认证-->
    <string name="authentication">实名认证</string>
    <string name="Submit_review">提交审核</string>
    <string name="authentication_Country_hint">请选择您的国籍</string>
    <string name="authentication_type_hint">请选择证件类型</string>
    <string name="authentication_xing_hint">请输入您身份证的姓氏如：张</string>
    <string name="authentication_ming_hint">请输入您身份证的名字如：三</string>
    <string name="authentication_before_hint">点击上传身份证正面照（个人信息）</string>
    <string name="authentication_after_hint">点击上传身份证背面照（国徽）</string>
    <string name="authentication_hand_hint">点击上传手持身份证正面照</string>
    <!--护照认证-->
    <string name="authentication_passport_before_hint">点击上传护照封面（外部封面）</string>
    <string name="authentication_passport_after_hint">点击上传护照信息面（内部信息）</string>
    <!--驾驶证认证-->
    <string name="authentication_driving_license_before_hint">点击上传驾照封面（外部封面）</string>
    <string name="authentication_driving_license_after_hint">点击上传驾照信息面（内部信息）</string>

    <string name="authentication_hint">上传要求:\n1.请.上传大小不超过5M的png,jpg,bmp格式的图片。\n2.请提供真实有效的本人证件,虚假认证可能会导致账\n户被冻结，由虚假认证产生的一切后果由用户负责!\n3.实名认证通过后不可修改！</string>
    <string name="review_status_success">审核成功，</string>
    <string name="review_status_success_hint">点击去交易</string>
    <string name="review_status_fail">审核失败，</string>
    <string name="review_status_fail_hint">点击重新上传</string>
    <string name="review_status_pending">待审核…</string>
    <!--联系我们-->
    <string name="contact_us_email">waterio118@gmail.com</string>
    <string name="contact_us_weichat">oisze_xtm</string>

    <!--帮助中心-->
    <string name="Help_submit_order">提交工单</string>
    <string name="Help_privacy_protection">隐私保护</string>
    <string name="Help_about_us">关于我们</string>
    <string name="Help_terms_service">服务条款</string>
    <string name="Help_disclaimer">免责声明</string>

</resources>
