<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cancel"
            style="@style/common_cancel"
            android:text="@string/signUp_cancel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginTop="@dimen/dp50"
            android:text="@string/signUp_set_password"
            android:textColor="@color/base_editText"
            android:textSize="28sp" />
        <RelativeLayout
            style="@style/common_user_rl"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_code"
                style="@style/common_edit_code"
                android:hint="@string/signUp_hint_code" />

            <TextView
                android:id="@+id/tv_yzm"
                android:text="@string/signUp_get_code"
                style="@style/common_tv_code" />

        </RelativeLayout>

        <RelativeLayout style="@style/common_user_rl">
        <EditText
                  android:id="@+id/ed_signUp_pwd"
                style="@style/common_edit_code"
            android:inputType="textPassword"
            android:hint="@string/signUp_hint_set_pwd" />

            <CheckBox
                android:id="@+id/img_is_invisible"
                android:button="@color/chart_white"
                style="@style/common_check_pwd" />

        </RelativeLayout>
        <RelativeLayout style="@style/common_user_rl">

            <EditText
                android:id="@+id/ed_signUp_Confirm_pwd"
                style="@style/common_edit_code"
                android:inputType="textPassword"
                android:hint="@string/signUp_hint_Confirm_pwd" />

            <CheckBox
                android:id="@+id/img_is_invisible2"
                android:button="@color/chart_white"
                style="@style/common_check_pwd" />

        </RelativeLayout>
        <RelativeLayout style="@style/common_user_rl">


        <EditText
            android:id="@+id/ed_signUp_Invitation_code"
                style="@style/common_edit_code"
                android:hint="@string/signUp_hint_Invitation_code" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp30"
                android:layout_marginTop="@dimen/dp15"
                android:text="@string/signUp_consent"
                android:textColor="@color/base_hint"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/signUp_Service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:text="@string/signUp_Service"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/sp16" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_signUp_Confirm"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/signUp_Confirm"
             style="@style/common_btn_bg"/>
    </LinearLayout>
</layout>