<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primarybg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_login_password"
            style="@style/me_ll"
            android:layout_marginTop="@dimen/dp10">

            <TextView
                style="@style/me_ll_text"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/Security_center_login_password" />

            <FrameLayout style="@style/framelayout_line" />

            <TextView
                android:id="@+id/tv_modify_login_pwd"
                style="@style/me_ll_text"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primaryText"
                android:text="@string/Security_center_modify" />

        </LinearLayout>

        <View style="@style/Common_line" />

        <LinearLayout
            android:id="@+id/ll_bind_email"
            style="@style/me_ll">

            <TextView
                style="@style/me_ll_text"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/Security_center_modify_bingd_email" />

            <FrameLayout style="@style/framelayout_line" />

            <TextView
                android:id="@+id/tv_bind_email"
                style="@style/me_ll_text"
                android:layout_marginRight="@dimen/dp20"
                android:textColor="@color/primaryText"

                android:text="@string/Security_center_bind" />

        </LinearLayout>

        <View style="@style/Common_line" />

        <LinearLayout
            android:id="@+id/ll_asset_pwd"
            style="@style/me_ll">

            <TextView
                style="@style/me_ll_text"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/Security_center_modify_asset_pwd" />

            <FrameLayout style="@style/framelayout_line" />

            <TextView
                android:id="@+id/tv_asset_pwd"
                style="@style/me_ll_text"
                android:textColor="@color/primaryText"
                android:layout_marginRight="@dimen/dp20"

                android:text="@string/Security_center_Setting" />

        </LinearLayout>

        <View style="@style/Common_line" />

        <LinearLayout
            android:id="@+id/ll_Security_Google"
            style="@style/me_ll">

            <TextView
                style="@style/me_ll_text"
                android:layout_marginLeft="@dimen/dp20"
                android:text="@string/Security_center_modify_Google" />
            <FrameLayout style="@style/framelayout_line" />

            <CheckBox
                android:id="@+id/checkbox_switch"
                android:button="@color/chart_white"
                android:background="@drawable/bg_google_switch"
                android:layout_height="25dp"
                android:layout_width="45dp"
                android:layout_marginRight="@dimen/dp20"
                />

        </LinearLayout>

    </LinearLayout>


</layout>
