<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:background="@color/primarybg"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/primaryBackLight"
            android:layout_marginTop="@dimen/dp10"
            android:layout_height="wrap_content">


            <RelativeLayout style="@style/common_user_rl">
                <EditText
                    android:id="@+id/ed_asset_pwd"
                    style="@style/common_edit_code"
                    android:inputType="numberPassword"
                    android:hint="@string/bind_pay_asset_pwd_hint" />

                <CheckBox
                    android:id="@+id/img_is_invisible"
                    android:button="@color/chart_white"
                    style="@style/common_check_pwd" />

            </RelativeLayout>
            <LinearLayout style="@style/common_user_rl">

                <EditText
                    android:id="@+id/ed_name"
                    style="@style/common_edit_code"
                    android:hint="@string/bind_pay_name_hint" />

            </LinearLayout>

            <LinearLayout style="@style/common_user_rl">

                <EditText
                    android:id="@+id/ed_account"
                    style="@style/common_edit_code"
                    android:hint="@string/bind_pay_bank_account" />

            </LinearLayout>
            <LinearLayout style="@style/common_user_rl">

                <EditText
                    android:id="@+id/ed_bank_branch"
                    style="@style/common_edit_code"
                    android:hint="@string/bind_pay_bank_bank_hint" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="@style/common_btn_bg"
            android:text="@string/bind_confirm" />
    </LinearLayout>

</layout>
