<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/primarybg"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/primaryBackLight"
            android:layout_marginTop="@dimen/dp10"
            android:layout_height="wrap_content">

            <RelativeLayout style="@style/common_user_rl">
                <EditText
                    android:id="@+id/ed_modify_old_pwd"
                    style="@style/common_edit_code"
                    android:inputType="number"
                    android:hint="@string/old_asset_password_hint" />

                <CheckBox
                    android:id="@+id/img_old_invisible"
                    android:button="@color/chart_white"
                    style="@style/common_check_pwd" />

            </RelativeLayout>
            <RelativeLayout
                style="@style/common_user_rl"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_code"
                    style="@style/common_edit_code"
                    android:hint="@string/signUp_Verification_code" />

                <TextView
                    android:id="@+id/tv_yzm"
                    android:text="@string/signUp_get_code"
                    style="@style/common_tv_code" />

            </RelativeLayout>

            <RelativeLayout style="@style/common_user_rl">
                <EditText
                    android:id="@+id/ed_modify_pwd"
                    style="@style/common_edit_code"
                    android:inputType="number"
                    android:hint="@string/asset_password_hint" />

                <CheckBox
                    android:id="@+id/img_is_invisible"
                    android:button="@color/chart_white"
                    style="@style/common_check_pwd" />

            </RelativeLayout>
            <RelativeLayout style="@style/common_user_rl">

                <EditText
                    android:id="@+id/ed_modify_Confirm_pwd"
                    style="@style/common_edit_code"
                    android:inputType="number"
                    android:hint="@string/signUp_hint_Confirm_pwd" />

                <CheckBox
                    android:id="@+id/img_is_invisible2"
                    android:button="@color/chart_white"
                    style="@style/common_check_pwd" />

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            style="@style/common_btn_bg"
            android:text="@string/forget_Confirm" />

    </LinearLayout>
</layout>
