<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/cancel"
            android:text="@string/signUp_cancel"
            style="@style/common_cancel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp50"
                    android:text="@string/forget_password"
                    android:textColor="@color/base_editText"
                    android:textSize="28sp" />


                <RelativeLayout
                    android:id="@+id/select_country"
                    style="@style/common_user_rl"
                    android:layout_marginTop="@dimen/dp30"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tv_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signUp_china"
                            android:textColor="@color/base_editText"
                            android:textSize="@dimen/sp16" />
                        <TextView
                            android:id="@+id/tv_area"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signUp_china_area"
                            android:textColor="@color/base_editText"
                            android:textSize="@dimen/sp16" />

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/img_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/icon_xiala" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:background="@color/base_line" />
                </RelativeLayout>

                <com.exchange.water.application.utils.widget.ClearEditTextView
                    android:id="@+id/edit_account"
                    style="@style/common_user_rl"
                    android:hint="@string/signUp_phone_number"
                    android:inputType="phone"
                    android:textColor="@color/base_editText"
                    android:textColorHint="@color/base_hint"
                    android:theme="@style/MyEditText"
                    android:textSize="@dimen/sp16" />

                <RelativeLayout
                    style="@style/common_user_rl"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ed_code"
                        style="@style/common_edit_code"
                        android:hint="@string/signUp_hint_code" />

                    <TextView
                        android:id="@+id/get_yzm"
                        android:text="@string/signUp_get_code"
                        style="@style/common_tv_code" />

                </RelativeLayout>
                <Button
                    android:id="@+id/btn_next"
                    style="@style/common_btn_bg"
                    android:text="@string/signUp_Next_step" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/dp30"
                    android:layout_marginRight="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp15"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_email_Mobile"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/sp14" />

                </RelativeLayout>


            </LinearLayout>
    </LinearLayout>
</layout>